fixed some errors fixed db added delete cascade
